feat: update booking workflows (multi-pet, proxy, auto-cancel)
Merge PR #110: multi-pet booking, proxy booking, estimated completion endpoint, auto-cancel pending bookings, staff specialty validation, and seeding fixes.